Added X-API-KEY auth middleware
