# internal/model/method.go
@@ -1,9 +1,7 @@
 package model
 
-// swagger:model isocurrencycode
 type ISOCurrencyCode string
 
-// swagger:model creditcard
 type CreditCard struct {
 	NameAndSurname string `json:"nameandsurename" bson:"nameandsurename"`
 	CardNo         string `json:"cardno" bson:"cardno"`
@@ -11,7 +9,6 @@ type CreditCard struct {
 	ExpiryDate     string `json:"expirtdate" bson:"expirtdate"`
 }
 
-// swagger:model paymentmethod
 type PaymentMethod struct {
 	CreditCard `json:"creditcard" bson:"creditcard"`
 }
