# internal/model/payment.go
@@ -2,41 +2,19 @@ package model
 
 import (
 	"time"
+
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 // Payment is the entity mnaged by the repository.
-// swagger:model payment
+// swagger:parameters CreatePaymentHandler
 type Payment struct {
-	// the id of the payment
-	// required: true
-	ID primitive.ObjectID `json:"id" bson:"_id"`
-
-	// the type of the payment: PAYMENT, REFUND
-	// required: true
-	Type string `json:"type" bson:"type"`
-
-	// the amount of the payment
-	// required: true
-	Amount string `json:"amount" binding:"required" bson:"amount"`
-
-	// the currency of the amount of the payment
-	// required: true
-	Currency ISOCurrencyCode `json:"currency" binding:"required" bson:"currency"`
-
-	// the payment methid, it may be Payment card
-	// required: true
-	Method PaymentMethod `json:"method" bson:"method"`
-
-	// the payment status
-	// required: true
-	Status string
-
-	// date of creation of the payment
-	// required: true
-	Created time.Time `json:"created" bson:"created"`
-
-	// date of last modification
-	// required: false
-	Modified time.Time `json:"modified" bson:"modified"`
+	ID       primitive.ObjectID `json:"id" bson:"_id"`
+	Type     string             `json:"type" bson:"type"`
+	Amount   string             `json:"amount" binding:"required" bson:"amount"`
+	Currency ISOCurrencyCode    `json:"currency" binding:"required" bson:"currency"`
+	Method   PaymentMethod      `json:"method" bson:"method"`
+	Status   string             `json:"status" bson:"status"`
+	Created  time.Time          `json:"created" bson:"created"`
+	Modified time.Time          `json:"modified" bson:"modified"`
 }
